[package]
name = "habit_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wasm-bindgen = { version = "0.2.93" }
serde-wasm-bindgen = "=0.6.5"
web-sys = { version = "0.3.70", features = ["Window", "Storage"] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
